hphp/test/zend/good/Zend/tests/bug40770.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
$zend_mm_enabled = getenv("USE_ZEND_ALLOC");
if ($zend_mm_enabled === "0") {
  exit("skip Zend MM disabled");
}
}
